--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trivia Game</title>
+    <title>Linux Trivia Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Bungee+Shade|Orbitron|Pacifico|Yatra+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <div id="start-screen">
-        <h1 class="graphic">Trivia Game Title</h1>
+        <h1 class="graphic">Linux Trivia</h1>
         <button id="startGame">Start Game</button>
     </div>
 
@@ -81,8 +82,8 @@
 
     <!-- game Over -->
     <div id="final-container">
-        <h1 class="graphic">Trivia Game Title</h1>
-        <h1 id="submit">Submit Trivia Answers</h1>
+        <h1 class="graphic">Linux Trivia Results</h1>
+        <h1 id="submit">You did great!!!~~!@!@@@</h1>
         <br>
         <h1>Score Tally</h1>
         <h1>Correct Answers: <span id="correct-answers">0</span></h1>
